--- a/styles/modules/reader-mode.css
+++ b/styles/modules/reader-mode.css
@@ -6,14 +6,14 @@
     --reader-mode-max-width: 70ch;
     --reader-mode-margin-block: 4rem;
 
-    --reader-mode-font-size: 1.2rem;
+    --reader-mode-font-size: calc(1.2rem * var(--kc-text-scale));
     --reader-mode-line-height: 1.8;
 
     --reader-mode-image-nav-offset: 15px;
     --reader-mode-image-nav-gap: 5px;
     --reader-mode-image-nav-z-index: 10;
 
-    --reader-mode-image-nav-button-font-size: 2.5rem;
+    --reader-mode-image-nav-button-font-size: calc(2.5rem * var(--kc-text-scale));
     --reader-mode-image-nav-button-min-size: 40px;
 }
 
