--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,3 +30,5 @@
 @import url("./modules/rss.css");
 @import url("./modules/about.css");
 @import url("./modules/debug.css");
+
+@import url("./modules/88by31.css");
